force-app/main/default/objects/BMCServiceDesk__KM_Feedback__c/BMCServiceDesk__KM_Feedback__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpKnowledgeFeedback</customHelpPage>
    <description>Store data for the feedback received for knowledge articles.</description>
    <label>Knowledge Feedback</label>
    <nameField>
        <displayFormat>KN-{000000000}</displayFormat>
        <label>Feedback #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>