force-app/main/default/objects/BMCServiceDesk__KM_Feedback__c/fields/BMCServiceDesk__Feedback__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Feedback__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>