force-app/main/default/objects/BMCServiceDesk__KM_Feedback__c/fields/BMCServiceDesk__FKKnowledgeArticle__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKKnowledgeArticle__c</fullName>
    <label>Knowledge Article</label>
    <referenceTo>BMCServiceDesk__KM_KnowledgeArticle__c</referenceTo>
    <relationshipLabel>Knowledge Feedback</relationshipLabel>
    <relationshipName>Knowledge_Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>