force-app/main/default/objects/BMCServiceDesk__KM_Feedback__c/fields/BMCServiceDesk__Issue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did this article meet your need?</label>
    <type>Checkbox</type>
</CustomField>