force-app/main/default/objects/BMCServiceDesk__KM_Feedback__c/fields/BMCServiceDesk__Rating__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Helpful</fullName>
            </value>
            <value>
                <fullName>Not Helpful</fullName>
            </value>
            <value>
                <fullName>Needs Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>